--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "typeRoots": ["node_modules/@types", "src/core/types"],
+    "target": "es6",
     "lib": [
       "dom",
       "dom.iterable",
@@ -18,7 +19,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": "src",
+    "paths": {
+      "@assets/*": ["./src/assets/*"]
+    },
   },
   "include": [
     "src"
